--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -9,13 +9,13 @@
     </div>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item"><a class="nav-link" href="#">Recipes</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Shopping-List</a></li>
+          <li class="nav-item"><a class="nav-link" href="#" (click)="onSelect('recipe')">Recipes</a></li>
+          <li class="nav-item"><a class="nav-link" href="#" (click)="onSelect(shopping-list)">Shopping-List</a></li>
         </ul>
 
         <ul class="navbar-nav">
             <div class="dropdown">
-                <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" 
+                <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink"
                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   Manage
                 </a>
